add block state endpoint
