# internal/api/monitoring.go
@@ -2,6 +2,7 @@ package api
 
 import (
 	"context"
+	"encoding/json"
 	"net/http"
 	"regexp"
 	"strings"
@@ -292,6 +293,51 @@ func (ae *APIEnv) GetMonitoringTasksBlockBlockIdParams(w http.ResponseWriter, re
 		FinishedAt: &finishedAt,
 		Inputs:     &MonitoringParamsResponse_Inputs{AdditionalProperties: inputs},
 		Outputs:    &MonitoringParamsResponse_Outputs{AdditionalProperties: outputs},
+	}); err != nil {
+		e := UnknownError
+		log.Error(e.errorMessage(err))
+		_ = e.sendError(w)
+		return
+	}
+}
+
+type StateSteps struct {
+	State map[string]json.RawMessage `json:"State"`
+}
+
+func (ae *APIEnv) GetBlockState(w http.ResponseWriter, r *http.Request, blockId string) {
+	ctx, span := trace.StartSpan(r.Context(), "start get block state")
+	defer span.End()
+
+	log := logger.GetLogger(ctx)
+
+	id, err := uuid.Parse(blockId)
+	if err != nil {
+		e := UnknownError
+		log.Error(e.errorMessage(err))
+		_ = e.sendError(w)
+		return
+	}
+
+	state, err := ae.DB.GetBlockState(ctx, id.String())
+	if err != nil {
+		e := GetBlockContextError
+		log.Error(e.errorMessage(err))
+		_ = e.sendError(w)
+		return
+	}
+
+	params := make(map[string]MonitoringBlockState, len(state))
+	for _, bo := range state {
+		params[bo.Name] = MonitoringBlockState{
+			Name:  bo.Name,
+			Value: bo.Value,
+			Type:  utils.GetJsonType(bo.Value),
+		}
+	}
+
+	if err = sendResponse(w, http.StatusOK, BlockStateResponse{
+		State: &BlockStateResponse_State{params},
 	}); err != nil {
 		e := UnknownError
 		log.Error(e.errorMessage(err))
